<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/addNoteButton"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1081dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/deleteNoteButton"
        android:text="Add New Note" />

    <Button
        android:id="@+id/deleteNoteButton"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1081dp"
        android:layout_marginBottom="0dp"
        android:text="Delete Note" />

    <Button
        android:id="@+id/sortByTitleButton"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1081dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/addNoteButton"
        android:text="Sort By Title" />

    <Button
        android:id="@+id/sortByLastEditedButton"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1081dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/sortByTitleButton"
        android:text="Sort By Last Edited" />

    <Button
        android:id="@+id/saveNoteButton"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1081dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@id/sortByLastEditedButton"
        android:text="Save Note" />



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="Back Button"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/backarrow" />

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="30dp"
            android:text="TextView" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="900dp"
        android:layout_height="599dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="137dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/listNotes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:choiceMode="none"
            android:visibility="visible" >

        </ListView>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="text"
                android:text="Title" />

            <EditText
                android:id="@+id/noteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:text="Content" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>