...
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1110dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/classesButton"
        android:text="@string/calendar"
        android:textOff="@string/calendar"
        android:textOn="@string/calendar" />

    <ToggleButton
        android:id="@+id/classesButton"
...
        android:layout_marginTop="0dp"
        android:layout_marginBottom="137dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listCourses"
            android:layout_width="500dp"
            android:layout_height="721dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:choiceMode="none"
            tools:ignore="InefficientWeight,Suspicious0dp" />
...
                android:ems="10"
                android:inputType="text"
                app:layout_column="3"
                app:layout_row="2" />

            <ImageButton
                android:id="@+id/notesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:src="@android:drawable/ic_menu_edit"
                app:layout_column="5"
                app:layout_row="1" />
...
