...
            android:text="Are You Sure You Want To Delete This Note?"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="0" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_gravity="end" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"
            app:layout_column="0"
            app:layout_row="1" />

...
